--- a/source/libs/scalar/CMakeLists.txt
+++ b/source/libs/scalar/CMakeLists.txt
@@ -14,6 +14,8 @@ target_link_libraries(scalar
     PRIVATE nodes
     PRIVATE function
     PRIVATE qcom
+    PRIVATE index
+    PRIVATE executor
     PRIVATE parser
     PRIVATE geometry
     PRIVATE decimal
