--- a/source/dnode/xnode/CMakeLists.txt
+++ b/source/dnode/xnode/CMakeLists.txt
@@ -2,9 +2,9 @@ aux_source_directory(src XNODE_SRC)
 add_library(xnode STATIC ${XNODE_SRC})
 target_include_directories(
     xnode
-    PUBLIC "${TD_SOURCE_DIR}/include/common/"
-    PUBLIC "${TD_SOURCE_DIR}/include/os/"
-    PUBLIC "${TD_SOURCE_DIR}/include/dnode/"
+    # PUBLIC "${TD_SOURCE_DIR}/include/common/"
+    # PUBLIC "${TD_SOURCE_DIR}/include/os/"
+    # PUBLIC "${TD_SOURCE_DIR}/include/dnode/"
     PUBLIC "${TD_SOURCE_DIR}/include/dnode/xnode"
     private "${CMAKE_CURRENT_SOURCE_DIR}/inc"
 )
