--- a/source/util/test/errorCodeTable.ini
+++ b/source/util/test/errorCodeTable.ini
@@ -561,12 +561,33 @@ TSDB_CODE_PAR_PRIMARY_KEY_IS_NULL                   = 0x8000267B
 TSDB_CODE_PAR_PRIMARY_KEY_IS_NONE                   = 0x8000267C
 TSDB_CODE_PAR_TRUE_FOR_NEGATIVE                     = 0x80002687
 TSDB_CODE_PAR_TRUE_FOR_UNIT                         = 0x80002688
-TSDB_CODE_PAR_OPTION_DUPLICATED                     = 0x80002699
-TSDB_CODE_PAR_INVALID_OPTION_VALUE                  = 0x8000269A
-TSDB_CODE_PAR_OPTION_VALUE_TOO_LONG                 = 0x8000269B
-TSDB_CODE_PAR_OPTION_VALUE_TOO_SHORT                = 0x8000269C
-TSDB_CODE_PAR_OPTION_VALUE_TOO_BIG                  = 0x8000269D
-TSDB_CODE_PAR_OPTION_VALUE_TOO_SMALL                = 0x8000269E
+TSDB_CODE_PAR_INVALID_COLS_FUNCTION                 = 0x80002689
+TSDB_CODE_PAR_INVALID_COLS_SELECTFUNC               = 0x8000268A
+TSDB_CODE_PAR_INVALID_COLS_ALIAS                    = 0x8000268B
+TSDB_CODE_PAR_PRIM_KEY_MUST_BE_TS                   = 0x8000268C
+TSDB_CODE_PAR_INVALID_REF_COLUMN                    = 0x8000268D
+TSDB_CODE_PAR_INVALID_TABLE_TYPE                    = 0x8000268E
+TSDB_CODE_PAR_INVALID_REF_COLUMN_TYPE               = 0x8000268F
+TSDB_CODE_PAR_MISMATCH_STABLE_TYPE                  = 0x80002690
+TSDB_CODE_PAR_COL_TAG_REF_BY_STM                    = 0x80002691
+TSDB_CODE_PAR_INVALID_PERIOD_UNIT                   = 0x80002692
+TSDB_CODE_PAR_INVALID_PERIOD_RANGE                  = 0x80002693
+TSDB_CODE_PAR_INVALID_DROP_VTABLE                   = 0x80002694
+TSDB_CODE_PAR_INVALID_COLUMN_REF                    = 0x80002695
+TSDB_CODE_PAR_INVALID_SLIDING_OFFSET                = 0x80002696
+TSDB_CODE_PAR_INVALID_INTERVAL_OFFSET               = 0x80002697
+TSDB_CODE_PAR_INVALID_STATE_WIN_EXTEND              = 0x80002698
+TSDB_CODE_PAR_ALGR_ID_TOO_LONG                      = 0x80002699
+TSDB_CODE_PAR_ALGR_NAME_TOO_LONG                    = 0x8000269A
+TSDB_CODE_PAR_ALGR_DESC_TOO_LONG                    = 0x8000269B
+TSDB_CODE_PAR_ALGR_TYPE_TOO_LONG                    = 0x8000269C
+TSDB_CODE_PAR_ALGR_OSSL_NAME_TOO_LONG               = 0x8000269D
+TSDB_CODE_PAR_OPTION_DUPLICATED                     = 0x8000269E
+TSDB_CODE_PAR_INVALID_OPTION_VALUE                  = 0x8000269F
+TSDB_CODE_PAR_OPTION_VALUE_TOO_LONG                 = 0x800026A0
+TSDB_CODE_PAR_OPTION_VALUE_TOO_SHORT                = 0x800026A1
+TSDB_CODE_PAR_OPTION_VALUE_TOO_BIG                  = 0x800026A2
+TSDB_CODE_PAR_OPTION_VALUE_TOO_SMALL                = 0x800026A3
 TSDB_CODE_PAR_INTERNAL_ERROR                        = 0x800026FF
 TSDB_CODE_PLAN_INTERNAL_ERROR                       = 0x80002700
 TSDB_CODE_PLAN_EXPECTED_TS_EQUAL                    = 0x80002701
