--- a/source/util/CMakeLists.txt
+++ b/source/util/CMakeLists.txt
@@ -10,6 +10,9 @@ if(TD_LINUX)
   DEP_ext_xxhash(util)
   DEP_ext_lzma2(util)
 endif()
+if (NOT ${TD_WINDOWS})
+  DEP_ext_ssl(util)
+endif()
 DEP_ext_geos(util)
 if(${BUILD_PCRE2})          # {
   DEP_ext_pcre2(util)
