fix: add HOME environment variable to doc build job

--- a/.github/workflows/tdengine-docs-ci.yml
+++ b/.github/workflows/tdengine-docs-ci.yml
@@ -105,6 +105,8 @@ jobs:
     runs-on:
       group: CI
       labels: [self-hosted, doc-build]
+    env:
+      HOME: /root
     needs: 
         - check-with-typos
         - check-with-autocorrect
