docs(crypto): fixes & docs for crypto funcs (#33865)

--- a/source/util/CMakeLists.txt
+++ b/source/util/CMakeLists.txt
@@ -33,6 +33,7 @@ endif(${ASSERT_NOT_CORE})
 target_include_directories(
     util
     PUBLIC "${TD_SOURCE_DIR}/include/util"
+    PUBLIC "${TD_SOURCE_DIR}/contrib/libaes/inc"
     PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inc"
     PRIVATE "${TD_SOURCE_DIR}/include/common"
     PRIVATE "${GRANT_CFG_INCLUDE_DIR}"
@@ -43,6 +44,7 @@ target_link_libraries(
     PUBLIC os common decimal
     PUBLIC api
     PUBLIC TSZ
+    PUBLIC aes
 )
 
 if(${BUILD_TEST})
