--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,3 +1,5 @@
+allure-pytest==2.13.5
+allure-python-commons==2.13.5
 APScheduler==3.11.0
 asyncssh==2.20.0
 Faker==37.0.0
@@ -11,13 +13,20 @@ paramiko==3.5.1
 pandas==2.2.3
 pexpect==4.8.0
 prettytable==3.15.1
+prometheus-api-client==0.5.7
+prometheus_client==0.21.1
 psutil==7.0.0
 pytest==8.3.5
+python-dotenv==1.0.1
 pytest-timeout==2.3.1
 pytest-xdist==3.6.1
+pywinrm==0.5.0
+PyYAML==6.0.2
 requests==2.32.4
 taos-ws-py==0.6.3
 taospy==2.8.6
 threadpool==1.3.2
 toml==0.10.2
 tzlocal==5.3.1
+wexpect
+setuptools
