--- a/.github/workflows/new-tdgpt-test.yml
+++ b/.github/workflows/new-tdgpt-test.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.10", "3.12"]
 
     defaults:
       run:
