--- a/source/util/test/errorCodeTable.ini
+++ b/source/util/test/errorCodeTable.ini
@@ -101,6 +101,11 @@ TSDB_CODE_TSC_COMPRESS_PARAM_ERROR                  = 0x80000233
 TSDB_CODE_TSC_COMPRESS_LEVEL_ERROR                  = 0x80000234
 TSDB_CODE_TSC_STMT_BIND_NUMBER_ERROR                = 0x80000236
 TSDB_CODE_TSC_INVALID_TOTP_CODE                     = 0x80000238
+TSDB_CODE_TSC_SESS_PER_USER_LIMIT                   = 0x80000239
+TSDB_CODE_TSC_SESS_CONN_TIMEOUT                     = 0x8000023A
+TSDB_CODE_TSC_SESS_CONN_IDLE_TIMEOUT                = 0x8000023B
+TSDB_CODE_TSC_SESS_MAX_CONCURRENCY_LIMIT            = 0x8000023C
+TSDB_CODE_TSC_SESS_MAX_CALL_VNODE_LIMIT             = 0x8000023D
 TSDB_CODE_TSC_INTERNAL_ERROR                        = 0x800002FF
 TSDB_CODE_MND_REQ_REJECTED                          = 0x80000300
 TSDB_CODE_MND_NO_RIGHTS                             = 0x80000303
