--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,33 +1,32 @@
-allure-pytest==2.13.5
-allure-python-commons==2.13.5
-APScheduler==3.11.0
-asyncssh==2.20.0
-
-decorator==5.2.1
-distro==1.9.0
-fabric2==3.0.0
-Faker==37.0.0
-hyperloglog==0.0.14
-numpy==2.0.2
-paho-mqtt==2.1.0
-paramiko==3.5.1
-pandas==2.2.3
-pexpect==4.8.0
-prettytable==3.15.1
-prometheus-api-client==0.5.7
-prometheus_client==0.21.1
-psutil==7.0.0
-pytest==8.3.5
-python-dotenv==1.0.1
-pytest-timeout==2.3.1
-pytest-xdist==3.6.1
-pywinrm==0.5.0
-PyYAML==6.0.2
-requests==2.32.4
-taos-ws-py==0.6.3
-taospy==2.8.6
-threadpool==1.3.2
-toml==0.10.2
-tzlocal==5.3.1
+allure-pytest>=2.13.5
+allure-python-commons>=2.13.5
+APScheduler>=3.11.0
+asyncssh>=2.20.0
+decorator>=5.2.1
+distro>=1.9.0
+fabric2>=3.0.0
+Faker>=37.0.0
+hyperloglog>=0.0.14
+numpy>=2.0.2
+paho-mqtt>=2.1.0
+paramiko>=3.5.1
+pandas>=2.2.3
+pexpect>=4.8.0
+prettytable>=3.15.1
+prometheus-api-client>=0.5.7
+prometheus_client>=0.21.1
+psutil>=7.0.0
+pytest>=8.3.5
+python-dotenv>=1.0.1
+pytest-timeout>=2.3.1
+pytest-xdist>=3.6.1
+pywinrm>=0.5.0
+PyYAML>=6.0.2
+requests>=2.32.4
+taos-ws-py>=0.6.3
+taospy>=2.8.6
+threadpool>=1.3.2
+toml>=0.10.2
+tzlocal>=5.3.1
 wexpect
 setuptools
