not compile sasl on community

--- a/source/libs/transport/CMakeLists.txt
+++ b/source/libs/transport/CMakeLists.txt
@@ -26,7 +26,7 @@ endif()
 
 
 if (${TD_LINUX})
-  if (${BUILD_LIBSASL})
+  if (${TD_ENTERPRISE})        # {
     DEP_ext_sasl2(transport)
   endif()
 endif()
