--- a/.github/workflows/tdengine-build.yml
+++ b/.github/workflows/tdengine-build.yml
@@ -114,7 +114,9 @@ jobs:
             libssl-dev \
             libz-dev \
             pkg-config \
-            zlib1g
+            zlib1g \
+            groff  
+            
 
       - name: Install dependencies on macOS
         if: runner.os == 'macOS'
