fix(tmq): pSw is null if get raw data

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_subdirectory(tsim)
 
-# if(${BUILD_TEST})
+if(${BUILD_TEST})
   add_subdirectory(test/c)
-# endif()
+endif()
 
 # ADD_SUBDIRECTORY(comparisonTest/tdengine)
