feat: add support for additional virtual environments and model services

--- a/tools/tdgpt/cfg/taosanode.ini
+++ b/tools/tdgpt/cfg/taosanode.ini
@@ -73,6 +73,12 @@ stats = 0.0.0.0:8387
 # python virtual environment directory
 virtualenv = /var/lib/taos/taosanode/venv/
 
+# set transformers:4.55.0
+chronos_venv_dir = /var/lib/taos/taosanode/venv_chronos
+
+# set transformers:4.33.0
+momentfm_venv_dir = /var/lib/taos/taosanode/venv_momentfm
+
 [taosanode]
 # default app log file
 app-log = /var/log/taos/taosanode/taosanode.app.log
